--- a/style2.css
+++ b/style2.css
@@ -6,6 +6,8 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     color: #fff;
+        font-weight: bold;
+
 }
 section {
     display: flex;
