--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+        font-weight: bold;
+
 }
 section {
     display: flex;
