--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-        font-weight: bold;
+    font-weight: bold;
 
 }
 section {
@@ -36,6 +36,8 @@ section {
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
 
  }
 
