--- a/style2.css
+++ b/style2.css
@@ -37,6 +37,8 @@ section {
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
 
  }
 
